--- a/conf/server.yaml.template
+++ b/conf/server.yaml.template
@@ -26,10 +26,10 @@ SERVER:
   # If one or more Satellites are provisioned,
   # this setting determines if they will be automatically checked in
   AUTO_CHECKIN: False
-  # The Ansible Tower workflow used to deploy a satellite
-  DEPLOY_WORKFLOW: "deploy-sat-jenkins"
   # Dictionary of arguments which should be passed along to the deploy workflow
   # DEPLOY_ARGUMENTS:
+  # Dictionary of arguments which should be passed along to the upgrade deploy workflow
+  # UPGRADE_DEPLOY_ARGUMENTS:
   # HTTP scheme when building the server URL
   # Suggested values for "scheme" are "http" and "https".
   SCHEME: https
