--- a/testimony.yaml
+++ b/testimony.yaml
@@ -14,6 +14,7 @@ CaseComponent:
     choices:
     # No spaces allowed
     - ActivationKeys
+    - AlternateContentSources
     - Ansible
     - AnsibleCollection
     - API
