--- a/testimony.yaml
+++ b/testimony.yaml
@@ -23,6 +23,7 @@ CaseComponent:
     - BootdiskPlugin
     - Bootstrap
     - Branding
+    - BVT
     - Candlepin
     - Capsule
     - Capsule-Content
@@ -104,6 +105,7 @@ CaseComponent:
     - SyncPlans
     - TasksPlugin
     - TemplatesPlugin
+    - TestEnvironment
     - TFTP
     - Upgrades
     - UsersRoles
