--- a/testimony.yaml
+++ b/testimony.yaml
@@ -68,7 +68,7 @@ CaseComponent:
     - katello-agent
     - katello-tracer
     - LDAP
-    - Leappintegration
+    - LeappIntegration
     - LifecycleEnvironments
     - LocalizationInternationalization
     - Logging
