Katello-tracer Alligned in CI

--- a/testimony.yaml
+++ b/testimony.yaml
@@ -65,7 +65,7 @@ CaseComponent:
     - Installer
     - InterSatelliteSync
     - katello-agent
-    - Katello-tracer
+    - katello-tracer
     - LDAP
     - Leappintegration
     - LifecycleEnvironments
