updated the dependency_merge.yml to get work in cherry-pick branch

--- a/.github/workflows/auto_cherry_pick_merge.yaml
+++ b/.github/workflows/auto_cherry_pick_merge.yaml
@@ -53,7 +53,7 @@ jobs:
         uses: omkarkhatavkar/wait-for-status-checks@main
         with:
           ref: ${{ github.head_ref }}
-          context: 'Robottelo Runner'
+          context: 'Robottelo-Runner'
           wait-interval: 60
           count: 100
 
