added the fix for the automerge cherry-pick dependabot PR's

--- a/.github/workflows/dependency_merge.yml
+++ b/.github/workflows/dependency_merge.yml
@@ -9,8 +9,7 @@ jobs:
     name: dependabot-auto-merge
     runs-on: ubuntu-latest
     if: |
-      (github.event.pull_request.user.login == 'dependabot[bot]' ||
-      github.event.pull_request.user.login == 'Satellite-QE') &&
+      github.event.pull_request.user.login == 'Satellite-QE' &&
       contains( github.event.pull_request.labels.*.name, 'dependencies')
 
     steps:
