--- a/.github/workflows/update_robottelo_image.yml
+++ b/.github/workflows/update_robottelo_image.yml
@@ -6,10 +6,7 @@ on:
     branches:
       - master
       - 6.*.z
-  repository_dispatch:
-    types:
-      - airgun-pr-merged
-      - nailgun-pr-merged
+  workflow_dispatch:
 
 jobs:
   robottelo_container:
@@ -17,44 +14,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get branch info
-        id: repo_branch
-        run: |
-          BRANCH="${{ github.event.client_payload.branch }}"
-          if [ -z "$BRANCH" ]; then
-            BRANCH="${GITHUB_REF##*/}"
-          fi
-          echo "REPO_BRANCH=$BRANCH" >> $GITHUB_OUTPUT
-
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          ref: "${{ steps.repo_branch.outputs.REPO_BRANCH }}"
 
-      - name: Update tag info
+      - name: Get image tag
         id: image_tag
         run: |
-          TAG="${{ steps.repo_branch.outputs.REPO_BRANCH }}"
+          TAG="${GITHUB_REF##*/}"
           TAG=${TAG/master/latest}
           echo "IMAGE_TAG=$TAG" >> $GITHUB_OUTPUT
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Quay Container Registry
-        uses: docker/login-action@v2
+      - name: Build Robottelo image
+        id: build-image
+        uses: redhat-actions/buildah-build@v2
         with:
-          registry: ${{ secrets.QUAY_SERVER }}
+          image: robottelo
+          tags: ${{ steps.image_tag.outputs.IMAGE_TAG }}
+          containerfiles: |
+            ./Dockerfile
+
+      - name: Push Robottelo image to quay.io
+        id: push-to-quay
+        uses: redhat-actions/push-to-registry@v2
+        with:
+          image: robottelo
+          tags: ${{ steps.image_tag.outputs.IMAGE_TAG }}
+          registry: ${{ secrets.QUAY_SERVER }}/${{ secrets.QUAY_NAMESPACE }}
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
-
-      - name: Build and push image to Quay
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.QUAY_SERVER }}/${{ secrets.QUAY_NAMESPACE }}/robottelo:${{ steps.image_tag.outputs.IMAGE_TAG }}
