--- a/.github/workflows/t2_reviews.yaml
+++ b/.github/workflows/t2_reviews.yaml
@@ -20,7 +20,7 @@ jobs:
           echo "Adding applicable labels to the PR $NUMBER"
           curl -L -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.CHERRYPICK_PAT }}" \
+          -H "Authorization: Bearer ${{ secrets.T2_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/SatelliteQE/robottelo/issues/$NUMBER/labels \
           -d '{"labels": '"$LABELS"'}'
@@ -31,7 +31,7 @@ jobs:
           curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.CHERRYPICK_PAT }}" \
+          -H "Authorization: Bearer ${{ secrets.T2_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/SatelliteQE/robottelo/pulls/$NUMBER/requested_reviewers \
           -d '{"team_reviewers": '"${REVIEWERS}"'}'
