T2 Reviewers GHA permitted for Pull Requests (#11942)
* New Temp token for T2 reviewers GHA

* updating permissions

--- a/.github/workflows/t2_reviews.yaml
+++ b/.github/workflows/t2_reviews.yaml
@@ -5,6 +5,9 @@ on:
   pull_request:
     paths: ['*', '.github/**', 'conf/**', 'pytest_fixtures/core/*', 'pytest_plugins/**', 'robottelo/**', '!robottelo/constants/*', 'scripts/**']
 
+permissions:
+  pull-requests: write
+
 env:
   NUMBER: ${{ github.event.number }}
   REVIEWERS: '["robottelo-tier-2-reviewers"]'
