Sanity Plugin with new sanity tests runs on installer tests satellite (#11645)
* New Sanity Tests, BVT Tests and the process

* Resolving comments

* Update pytest_fixtures/component/puppet.py

Co-authored-by: Ondřej Gajdušek <ogajduse@redhat.com>

---------

Co-authored-by: Ondřej Gajdušek <ogajduse@redhat.com>

--- a/testimony.yaml
+++ b/testimony.yaml
@@ -22,6 +22,7 @@ CaseComponent:
     - BootdiskPlugin
     - Bootstrap
     - Branding
+    - BVT
     - Candlepin
     - Capsule
     - Capsule-Content
@@ -103,6 +104,7 @@ CaseComponent:
     - SyncPlans
     - TasksPlugin
     - TemplatesPlugin
+    - TestEnvironment
     - TFTP
     - Upgrades
     - UsersRoles
