--- a/.github/workflows/t2_reviews.yaml
+++ b/.github/workflows/t2_reviews.yaml
@@ -3,7 +3,7 @@ name: Auto assign T2 Reviewers
 
 on:
   pull_request:
-    paths: ['*', '.github/**', 'conf/**', 'pytest_fixtures/core/*', 'pytest_plugins/**', 'robottelo/**', '!robottelo/constants/*', 'scripts/**']
+    paths: ['*', '.github/**', 'conf/**', 'pytest_fixtures/**', 'pytest_plugins/**', 'robottelo/**', '!robottelo/constants/*', 'scripts/**', 'tests/foreman/sanity/*']
 
 permissions:
   pull-requests: write
@@ -23,8 +23,7 @@ jobs:
           echo "Adding applicable labels to the PR $NUMBER"
           curl -L -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.CHERRYPICK_PAT }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
+          -H "Authorization: Bearer ${{ secrets.T2_TOKEN }}" \
           https://api.github.com/repos/SatelliteQE/robottelo/issues/$NUMBER/labels \
           -d '{"labels": '"$LABELS"'}'
 
@@ -34,7 +33,6 @@ jobs:
           curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.CHERRYPICK_PAT }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
+          -H "Authorization: Bearer ${{ secrets.T2_TOKEN }}" \
           https://api.github.com/repos/SatelliteQE/robottelo/pulls/$NUMBER/requested_reviewers \
           -d '{"team_reviewers": '"${REVIEWERS}"'}'
