--- a/.github/workflows/t2_reviews.yaml
+++ b/.github/workflows/t2_reviews.yaml
@@ -3,7 +3,7 @@ name: Auto assign T2 Reviewers
 
 on:
   pull_request:
-    paths: ['*', '.github/**', 'conf/**', 'pytest_fixtures/core/*', 'pytest_plugins/**', 'robottelo/**', '!robottelo/constants/*', 'scripts/**']
+    paths: ['*', '.github/**', 'conf/**', 'pytest_fixtures/**', 'pytest_plugins/**', 'robottelo/**', '!robottelo/constants/*', 'scripts/**', 'tests/foreman/sanity/*']
 
 permissions:
   pull-requests: write
