--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 # Version updates managed by dependabot
 
 betelgeuse==1.10.0
-broker[docker]==0.3.2
-cryptography==41.0.1
-deepdiff==6.3.0
-dynaconf[vault]==3.1.12
+broker[docker]==0.3.3
+cryptography==41.0.3
+deepdiff==6.3.1
+dynaconf[vault]==3.2.0
 fauxfactory==3.1.0
 jinja2==3.1.2
 manifester==0.0.13
 navmazing==1.1.6
 productmd==1.36
-pyotp==2.8.0
+pyotp==2.9.0
 python-box==7.0.1
 pytest==7.4.0
 pytest-services==2.2.1
@@ -25,7 +25,7 @@ testimony==2.3.0
 wait-for==1.2.0
 wrapanapi==3.5.17
 
-# Get airgun, nailgun and upgrade from master
+# Get airgun, nailgun and upgrade from 6.12.z
 git+https://github.com/SatelliteQE/airgun.git@6.12.z#egg=airgun
 git+https://github.com/SatelliteQE/nailgun.git@6.12.z#egg=nailgun
 --editable .
