Introduce and enhance robottelo.hosts features (#12144)
* Introduce and enhance robottelo.hosts features

* Apply suggestions from code review

Co-authored-by: Jake Callahan <jacob.callahan05@gmail.com>

* Revert Jake's suggestion as cached_property stores data in __dict__

* Clean cached properties of LEAPPed host to get non-cached OS version

* Use redhat-release to keep RHEL 6 compatibility

* Reverse operations

---------

Co-authored-by: Jake Callahan <jacob.callahan05@gmail.com>
(cherry picked from commit 49c4692d03acb0117d63a39590185d22f6ad8db8)

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,10 @@ tmp/
 
 # Virtual Environments
 ven*/
+
+# pytest-fixture-tools artifacts
+artifacts/
+
+# pyvcloud artifacts
+# workaround till https://github.com/vmware/pyvcloud/pull/766 is merged and released
+**vcd_sdk.log
