leapp scenario 8.8 to 9.2 (#11553)
leapp sceanrio 8.8 to 9.2

(cherry picked from commit 0bb9a37843ee8d4e453c87c80777b6e78212a977)

--- a/testimony.yaml
+++ b/testimony.yaml
@@ -67,7 +67,7 @@ CaseComponent:
     - katello-agent
     - katello-tracer
     - LDAP
-    - Leappintegration
+    - LeappIntegration
     - LifecycleEnvironments
     - LocalizationInternationalization
     - Logging
