--- a/testimony.yaml
+++ b/testimony.yaml
@@ -68,7 +68,7 @@ CaseComponent:
     - katello-agent
     - katello-tracer
     - LDAP
-    - LeappIntegration
+    - Leappintegration
     - LifecycleEnvironments
     - LocalizationInternationalization
     - Logging
