[6.12.z] leapp cherypick failure fix & component name updated

--- a/testimony.yaml
+++ b/testimony.yaml
@@ -67,7 +67,7 @@ CaseComponent:
     - katello-agent
     - katello-tracer
     - LDAP
-    - LeappIntegration
+    - Leappintegration
     - LifecycleEnvironments
     - LocalizationInternationalization
     - Logging
