--- a/conf/vmware.yaml.template
+++ b/conf/vmware.yaml.template
@@ -1,33 +1,31 @@
 VMWARE:
-  # Vmware to be added as a compute resource
-  # vmware vcenter URL, e.g. example.com
+  # VMware to be added as a compute resource
+  # VCENTER: vmware vcenter URL
   VCENTER:
-  # Login for vmware
+  # USERNAME: Login for vmware
   USERNAME:
-  # Password for vmware
+  # PASSWORD: Password for vmware
   PASSWORD:
-  # vmware datacenter
+  # DATACENTER: vmware datacenter
   DATACENTER:
-  # cluster: vmware cluster
+  # CLUSTER: vmware cluster
   CLUSTER:
-  # Name of VM that should be used
+  # DATASTORE: vmware datastore
+  DATASTORE:
+  # VM_NAME: Name of VM to power On/Off & delete
   VM_NAME:
-  # mac_address: Mac address of the vm
+  # MAC_ADDRESS: Mac address of the vm
   MAC_ADDRESS:
-  # hypervisor: IP address of the hypervisor
+  # HYPERVISOR: IP address or hostname of the hypervisor
   HYPERVISOR:
-
-
-  # Vmware Compute resource image data
-  # Operating system of the image
+  # VMware Compute resource image data
+  # IMAGE_OS: Operating system of the image
   IMAGE_OS:
-  # Architecture of the image
+  # IMAGE_ARCH: Architecture of the image
   IMAGE_ARCH:
-  # Login to the image
+  # IMAGE_USERNAME: Login to the image
   IMAGE_USERNAME:
-  # Password of that user
+  # IMAGE_PASSWORD: Password to the image
   IMAGE_PASSWORD:
-  # Image name on the external provider
+  # IMAGE_NAME: Image name on the external provider
   IMAGE_NAME:
-  # Interface used for some tests; not required to work with provisioning, not required to be in VLAN
-  INTERFACE:
