Remove BROKER_DIRECTORY from robottelo config
This is something that broker handles on its own and, due to import
timing, isn't handled correctly in robottelo anyway. Removing the field
and config mechanism should eliminate confusion around this behavior.

--- a/conf/broker.yaml.template
+++ b/conf/broker.yaml.template
@@ -1,7 +1,5 @@
 BROKER:
-    # The path where your broker settings and inventory are located
-    # If you leave it blank, the default is the output of `broker --version`
-    BROKER_DIRECTORY:
+    # Broker has its own config which you can find by running `broker --version`
     HOST_WORKFLOWS:
         POWER_CONTROL: vm-power-operation
         EXTEND: extend-vm
